Updated the Material Issue Class.